workspace/.metadata/.plugins/org.eclipse.cdt.ui/Info_projects.build.log
23:17:32 **** Incremental Build of configuration Release for project Info_projects ****
make all 
Building file: ../Proxy_SOCKS4.c
Invoking: Cross GCC Compiler
gcc -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Proxy_SOCKS4.d" -MT"Proxy_SOCKS4.d" -o "Proxy_SOCKS4.o" "../Proxy_SOCKS4.c"
../Proxy_SOCKS4.c: In function ‘main’:
../Proxy_SOCKS4.c:24:44: warning: passing argument 3 of ‘accept’ makes pointer from integer without a cast [enabled by default]
  int accept_res = accept (cli_soc, (struct sockaddr*)&proxy_addr, sizeof(proxy_addr), SOCK_STREAM);
                                            ^
In file included from /usr/include/netinet/in.h:23:0,
                 from ../Proxy_SOCKS4.c:4:
/usr/include/x86_64-linux-gnu/sys/socket.h:243:12: note: expected ‘socklen_t * __restrict__’ but argument is of type ‘long unsigned int’
 extern int accept (int __fd, __SOCKADDR_ARG __addr,
            ^
../Proxy_SOCKS4.c:24:44: error: too many arguments to function ‘accept’
  int accept_res = accept (cli_soc, (struct sockaddr*)&proxy_addr, sizeof(proxy_addr), SOCK_STREAM);
                                            ^
In file included from /usr/include/netinet/in.h:23:0,
                 from ../Proxy_SOCKS4.c:4:
/usr/include/x86_64-linux-gnu/sys/socket.h:243:12: note: declared here
 extern int accept (int __fd, __SOCKADDR_ARG __addr,
            ^
../Proxy_SOCKS4.c:27:2: warning: parameter names (without types) in function declaration [enabled by default]
  int close(accept_res);
  ^
../Proxy_SOCKS4.c:24:6: warning: unused variable ‘accept_res’ [-Wunused-variable]
  int accept_res = accept (cli_soc, (struct sockaddr*)&proxy_addr, sizeof(proxy_addr), SOCK_STREAM);
      ^
../Proxy_SOCKS4.c:31:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [Proxy_SOCKS4.o] Ошибка 1

23:17:32 Build Finished (took 158ms)

